--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,10 @@
 buildscript {
+    repositories {
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
+    }
     dependencies {
     classpath 'com.google.gms:google-services:4.3.13'
         def nav_version = "2.5.1"
