--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,8 @@ dependencies {
     //maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    //places
+//    implementation 'com.android.volley:volley:1.2.1'
+//    implementation 'com.google.android.libraries.places:places:2.4.0'
 }
